@@ -1,4 +1,0 @@
-package gameMode;
-
-public enum None {
-}
